# reviewguard

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  LICENSE  Makefile  README.md  agents-cli-manifest.yaml  cloudbuild.yaml  pyproject.toml
agent/: __init__.py  agent.py  llm_client.py  mock_utils.py  state.py
agent/nodes/: __init__.py  audit_log.py  code_review.py  confidence_router.py  github_comment.py  github_mcp_client.py  memory_loader.py  security_alert.py  security_screen.py  spec_compliance.py  spec_reader.py
agent/skills/commit_pattern_analyzer/: SKILL.md  commit_pattern_analyzer.py
agent/skills/complexity_scorer/: SKILL.md  complexity_scorer.py
agent/skills/spec_compliance_checker/: SKILL.md  spec_compliance_checker.py
evals/: eval_config.yaml  generate_traces.py
evals/datasets/: good_pr.json  injection_pr.json  partial_pr.json  secret_leak_pr.json
tests/: test_memory_loader.py  test_security_screen.py  test_spec_compliance.py
