[project]
name = "reviewguard"
version = "1.0.0"
description = "Confidence-aware, memory-backed PR verification agent — ADK 2.0"
requires-python = ">=3.11"

dependencies = [
    "google-adk>=2.0.0",
    "google-generativeai>=0.8.0",
    "PyGithub>=2.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "semgrep>=1.80.0",
    "fastapi>=0.111.0",      # for Cloud Run webhook server
    "uvicorn>=0.30.0",       # for Cloud Run webhook server
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.agents-cli]
agent_module = "agent.agent"
app_attribute = "app"
playground_port = 8080
