[project]
name = "reviewguard"
version = "1.0.0"
description = "Confidence-aware, memory-backed PR verification agent — ADK 2.0"
requires-python = ">=3.11"

dependencies = [
    "google-adk>=2.0.0",
    "google-genai>=0.1.1",
    "PyGithub>=2.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
cloud-run = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.7.0",
    "semgrep>=1.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.agents-cli]
agent_module = "agent.agent"
app_attribute = "app"
playground_port = 8090
